@@ -1,3 +1,7 @@
+10 September 2008
++ Moved controlpanel unregisteration to control panel class.
++ Made some php 5.0 format changes
+
 Version 2.1.6
 --------------------------------------------------------------
 18 April 2008
